--- a/src/main/resources/templates/addSongs.html
+++ b/src/main/resources/templates/addSongs.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
+<header th:replace="fragments/navbar.html"/>
 <body>
 <form method="post" th:action="@{/addSongs}">
   <div id="searchedSongs">
@@ -20,5 +20,6 @@
   </div>
   <input type="button" id="">
 </form>
+<footer th:replace="fragments/footer.html"/>
 </body>
 </html>
