--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,23 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<nav id="navbar" class="navbar navbar-dark" style="background: #191414" >
-  <div class="container-fluid" >
-    <a id="logo" class="navbar-brand mx-auto"  th:href="@{aboutUs}">
-      <img th:src="@{/logo-navbar.svg}" alt="" class="d-inline-block align-text-top">
-      <span id="logo-text">Spotify & Chill</span>
-      <span class="tooltiptext">Learn more about us</span>
-    </a>
-  </div>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<header>
+  <th:block xmlns:th="http://www.thymeleaf.org">
+    <meta charset="UTF-8">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{/style.css}" />
+  <nav id="navbar" class="navbar navbar-dark" style="background: #191414" >
+    <div class="container-fluid" >
+      <a id="logo" class="navbar-brand mx-auto"  href="/">
+        <img th:src="@{/logo-navbar.svg}" alt="" class="d-inline-block align-text-top">
+        <span class="navbar-brand mx-auto" style="font-size: 48px">Spotify & Chill</span>
+      </a>
+      <th:block th:if="${session.user!=null}">
+        <a id="logout" class="navbar nav ms-auto text-center pt-0 pb-0 text-light fs-3" style="font-family: MuseoModerno" th:href="@{logout}">Logout</a>
+      </th:block>
+    </div>
+  </nav>
+  </th:block>
+</header>
