--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <header th:replace="fragments/navbar.html"/>
 <body id="welcomePageBackground">
 
-<div id="wrapper">
+<div id="wrapper" class="container mx-auto justify-content-center">
 <a id="login" class="position-absolute" th:href="@{https://accounts.spotify.com/authorize/?scope=playlist-modify-public playlist-modify-private user-read-private playlist-read-private user-top-read playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70}" >
     <div class="row" id="login-with-text">
         <span id="login-text">Login</span>
@@ -25,13 +25,8 @@
     </div>
 </a>
 
-<img id="background" th:src="@{/Vector.svg}"></img>
+<img id="background"  th:src="@{/Vector.svg}">
 </div>
-<!--<p>-->
-<!--    <span th:text="${hello}">Hello!</span>-->
-<!--</p>-->
-<!--<p>Inside Html page</p>-->
-<!--<p>Login to spotify</p>-->
-<!--<a href="https://accounts.spotify.com/authorize/?scope=user-read-private playlist-read-private playlist-modify-public user-library-read user-read-recently-played streaming app-remote-control&response_type=code&redirect_uri=http://localhost:8080/index/responseFromSpotify&client_id=96faf0542a934748ab800dae8f474e70">click here to redirect to Spotify Web App (where you would authorize this application to get a token to interact with spotify on your behalf)</a>-->
+<footer th:replace="fragments/footer.html"/>
 </body>
 </html>
