design fixes and users implemented

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -14,64 +14,75 @@
 <body id="BasicBackground">
 <header>
     <p class="h1 text-center p-5" style="color: #1CB398; font-family: MuseoModerno">About Us</p>
-    <p class="h2 text-center pt-5" style="color:darkred; font-family: MuseoModerno">Development</p>
+    <p class="h2 text-center p-5" style="color:darkred; font-family: MuseoModerno">Development</p>
 </header>
 
-<section class="mt-3 text-center">
+<div class="overlay"></div>
+<div class="container">
     <div class="row">
-        <div class="col">
-            <div class="container text-center mx-auto">
-                <img th:src="@{/Mimz1.jpeg}" class="RoundedImage">
-                <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Mimoza</p>
-                <nav class="nav justify-content-center" >
-                    <a class="nav-link">
-                        <i class="bi bi-facebook" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-spotify" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-instagram" style="color: #1cb398"></i>
-                    </a>
-                </nav>
-            </div>
-        </div>
-        <div class="col">
-            <div class="container text-center mx-auto">
-                <img th:src="@{/Marko1.png}" class="RoundedImage">
-                <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Marko</p>
-                <nav class="nav justify-content-center" >
-                    <a class="nav-link">
-                        <i class="bi bi-facebook" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-spotify" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-instagram" style="color: #1cb398"></i>
-                    </a>
-                </nav>
-            </div>
-        </div>
-        <div class="col">
-            <div class="container text-center mx-auto">
-                <img th:src="@{/Jovana1.png}" class="RoundedImage">
-                <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Jovana</p>
-                <nav class="nav justify-content-center" >
-                    <a class="nav-link">
-                        <i class="bi bi-facebook" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-spotify" style="color: #1cb398"></i>
-                    </a>
-                    <a class="nav-link">
-                        <i class="bi bi-instagram" style="color: #1cb398"></i>
-                    </a>
-                </nav>
+        <div class="col-lg-9 mx-auto" style="padding-left: 0;padding-right: 0;">
+            <div class="row">
+                <div class="col-xl-4 mx-auto">
+                    <div class="container m-3">
+                        <img th:src="@{/Mimz1.jpeg}" class="RoundedImage">
+                        <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Mimoza</p>
+                        <nav class="nav justify-content-center" >
+                            <a class="nav-link">
+                                <i class="bi bi-facebook" style="color: #1cb398"></i>
+                            </a>
+                            <a class="nav-link">
+                                <i class="bi bi-spotify" style="color: #1cb398"></i>
+                            </a>
+                            <a class="nav-link">
+                                <i class="bi bi-instagram" style="color: #1cb398"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="col-xl-4 mx-auto">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                        <div class="container m-3">
+                            <img th:src="@{/Marko1.png}" class="RoundedImage">
+                            <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Marko</p>
+                            <nav class="nav justify-content-center" >
+                                <a class="nav-link">
+                                    <i class="bi bi-facebook" style="color: #1cb398"></i>
+                                </a>
+                                <a class="nav-link">
+                                    <i class="bi bi-spotify" style="color: #1cb398"></i>
+                                </a>
+                                <a class="nav-link">
+                                    <i class="bi bi-instagram" style="color: #1cb398"></i>
+                                </a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 mx-auto">
+                    <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                        <div class="container m-3">
+                            <img th:src="@{/Jovana1.png}" class="RoundedImage">
+                            <p class="h3 mx-auto text-center" style="font-family: MuseoModerno; color: #1CB398">Jovana</p>
+                            <nav class="nav justify-content-center" >
+                                <a class="nav-link">
+                                    <i class="bi bi-facebook" style="color: #1cb398"></i>
+                                </a>
+                                <a class="nav-link">
+                                    <i class="bi bi-spotify" style="color: #1cb398"></i>
+                                </a>
+                                <a class="nav-link">
+                                    <i class="bi bi-instagram" style="color: #1cb398"></i>
+                                </a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="row mt-5">
+</div>
+
+<section class="mt-3 text-center pb-5">
+    <div class="row">
         <div class="col mx-auto text-center">
             <div class="container text-center mx-auto">
                 <p class="h2 my-3" style="font-family: MuseoModerno; color: darkred">Design</p>
