--- a/src/main/resources/templates/selectedProfile.html
+++ b/src/main/resources/templates/selectedProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title th:text="'Welcome ' + ${session.user.displayName}"></title>
+    <title th:text="${session.selectedUser.displayName}"></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,13 +12,13 @@
 <body id="BasicBackground">
 <p hidden th:text="${session.token}" id="token"></p>
 <header class="text-center mx-auto">
-    <a th:href="${session.user.spotifyUrl}">
-    <img th:src="${session.user.imageUrl}" class="RoundedImage" id="profilePicture">
+    <a th:href="${session.selectedUser.spotifyUrl}">
+        <img th:src="${session.selectedUser.imageUrl}" class="RoundedImage" id="profilePicture">
     </a>
-    <p th:text="${session.user.displayName}" id="profileName" class="UsernameTextHeader"></p>
-    <div class="mx-auto justify-content-center" th:if="${session.user.topSong != null}">
+    <p th:text="${session.selectedUser.displayName}" id="profileName" class="UsernameTextHeader"></p>
+    <div class="mx-auto justify-content-center" th:if="${session.selectedUser.topSong != null}">
 
-        <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/track/' + ${session.user.topSong.id} + '?utm_source=generator&theme=0'" width="15%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/track/' + ${session.selectedUser.topSong.id} + '?utm_source=generator&theme=0'" width="15%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
     </div>
 
@@ -33,9 +33,9 @@
 <div class="container pt-5 navDivs pb-5" id="artistsContainer">
     <div class="column mx-auto">
         <div class="row mx-auto" id="artists">
-            <ul th:each="artist : ${session.user.artists}" style="list-style: none; display: inline" class="mx-auto">
+            <ul th:each="artist : ${session.selectedUser.artists}" style="list-style: none; display: inline" class="mx-auto">
                 <a th:href="${artist.spotifyUrl}">
-                <li class="mx-auto"><img th:src="${artist.imageUrl}" class="RoundedImage"></li>
+                    <li class="mx-auto"><img th:src="${artist.imageUrl}" class="RoundedImage"></li>
                 </a>
                 <li style="font-family: MuseoModerno" class="mx-auto text-light text-center pt-3"><p th:text="${artist.name}"></p></li>
             </ul>
@@ -45,9 +45,9 @@
 <div style="display: none" class="container navDivs pt-5 pb-5" id="albumsContainer">
     <div class="column mx-auto">
         <div class="row mx-auto" id="albums">
-            <ul th:each="album : ${session.user.albums}" style="list-style: none" class="mx-auto">
+            <ul th:each="album : ${session.selectedUser.albums}" style="list-style: none" class="mx-auto">
                 <a th:href="${album.spotifyUrl}">
-                <li class="mx-auto"><img th:src="${album.imageUrl}" class="RoundedImage"></li>
+                    <li class="mx-auto"><img th:src="${album.imageUrl}" class="RoundedImage"></li>
                 </a>
                 <li style="font-family: MuseoModerno" class="mx-auto text-light text-center pt-3"><p th:text="${album.name}"></p></li>
                 <li style="font-family: MuseoModerno" class="mx-auto text-light text-center pt-3"><p th:text="${album.aristName}"></p></li>
@@ -58,22 +58,11 @@
 </div>
 <div style="display: none" class="container navDivs" id="playlistContainer">
     <div class="container pt-5 text-center justify-content-center">
-        <ul th:each = "playlist : ${session.user.playlists}" style="list-style: none; display: inline" class="mx-auto">
+        <ul th:each = "playlist : ${session.selectedUser.playlists}" style="list-style: none; display: inline" class="mx-auto">
             <li class="pb-5">
                 <iframe style="border-radius:12px" th:src="'https://open.spotify.com/embed/playlist/' + ${playlist.id} +'?utm_source=generator'" width="50%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <div class="container">
-                    <a class="btn btn-dark btn-sm justify-content-center" type="button" th:href="'/editPlaylist/' + ${playlist.id}" style="font-family: MuseoModerno;">Edit</a>
-                </div>
-                <form th:action="@{'/deletePlaylist/{id}' (id=${playlist.id})}" th:method="DELETE" class="justify-content-center">
-                    <button type="submit" style="font-family: MuseoModerno" th:href="'/deletePlaylist/' + ${playlist.id}" class="btn btn-dark justify-content-center btn-sm">
-                        Delete
-                    </button>
-                </form>
-            </li>
         </ul>
-        <div class="container text-center pb-5">
-            <a class="btn btn-dark justify-content-center" type="button" href="/createPlaylist" style="font-family: MuseoModerno">Create a new Playlist</a>
-        </div>
+
     </div>
 
 
