design files fix

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-  <th:block xmlns:th="http://www.thymeleaf.org">
-    <meta charset="UTF-8">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+<header xmlns:th="http://www.thymeleaf.org">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" th:href="@{/style.css}" />
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
   <nav id="navbar" class="navbar navbar-dark" style="background: #191414" >
     <div class="container-fluid" >
       <a id="logo" class="navbar-brand mx-auto"  href="/">
@@ -19,5 +15,4 @@
       </th:block>
     </div>
   </nav>
-  </th:block>
 </header>
